run for the night, but with max_epochs=1

--- a/user_settings.env
+++ b/user_settings.env
@@ -11,15 +11,36 @@ DATA_DIR=${WORKING_DIR}/data/ufz_im_challenge
 LOG_DIR=${WORKING_DIR}/experiments/logs
 MODEL_DIR=${WORKING_DIR}/experiments/models
 
-NAME=whale
-TRAIN_SET_NAME=free_text_befund
-TEST_SET_NAMES=free_text_befund
-VAL_SET_NAMES=free_text_befund 
-DATA_SUFFIX=standard_512
-VAL_CHECK_INTERVAL=0.1
+NAME=turtlethon
+
+VAL_CHECK_INTERVAL=1
 CHECK_VAL_EVERY_N_EPOCHS=1
-TRAIN_BATCH_SIZE=4
-VAL_BATCH_SIZE=4
-TEST_BATCH_SIZE=4
+TRAIN_BATCH_SIZE=8
+VAL_BATCH_SIZE=8
+TEST_BATCH_SIZE=8
+NUM_WORKERS=8
 MAX_EPOCHS=1
 SAVE_TOP_K=1
+LEARNING_RATE=0.0001
+ACTIVATION=sigmoid
+DATASET_SIZE=256
+VFLIP_CHANCE=0.
+ROTATION_CHANCE=0.
+ENCODER_WEIGHTS=imagenet
+ENCODER=se_resnext50_32x4d
+ARCHITECTURE=fpn
+
+#ENCODER=densenet161
+
+# ENCODER=resnext50_32x4d
+# ENCODER_WEIGHTS=imagenet
+
+# ENCODER=resnext101_32x16d
+# ENCODER_WEIGHTS=instagram
+
+# # best?
+# ENCODER=se_resnext50_32x4d
+# ENCODER_WEIGHTS=imagenet
+
+
+
