--- a/Pipfile
+++ b/Pipfile
@@ -6,14 +6,14 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-torch = "==1.6.0"
-torchvision = "==0.7.0"
+torch = "==1.7.0"
 pytorch-lightning = "==1.0.0"
 pandas = "*"
 segmentation-models-pytorch = "*"
 python-dotenv = "*"
 albumentations = "*"
 install = "*"
+torchvision = "*"
 
 [requires]
 python_version = "3.8"
