--- a/user_settings.env
+++ b/user_settings.env
@@ -3,9 +3,8 @@
 # OR: Specify the path to each dataset individually
 
 
-WORKING_DIR=/home/ksquare/repositories/datathon
-# For preprocessing
-#DATA_DIR=/home/ksquare/private_data/repository_data/nlp/datasets/PG-StructUnstruct
+#WORKING_DIR=<working dir>
+
 DATA_DIR=${WORKING_DIR}/data/ufz_im_challenge
 
 LOG_DIR=${WORKING_DIR}/experiments/logs
